gitops-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-demo
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: gitops-demo
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gitops-demo
    spec:
      containers:
        - name: gitops-demo
          image: "registry.baloise.dev/example/gitops-nginx-demo:a9f53097d5c247558818e21631bb1ebe641a3c9d"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
