gitops-demo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-demo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: gitops-demo
